refactor: project structure, ResponseService, ErrorStatus, Repositories, JwtInterceptor (#7)
* refactor: add JWT authentication

* refactor: move InterceptorConfig to common

* refactor: ResponseService and ExceptionStatus

* refactor: delete legacy modules

* refactor: replace repository Impl wrappers with Spring Data JPA interfaces directly

* refactor: PaymentController endpoint

* Revert "refactor: PaymentController endpoint"

This reverts commit 83c01b707df1256c5a43b01bc47d55e664f1ed6e.

* Revert "Revert "refactor: PaymentController endpoint""

This reverts commit a018ab3b787dd2d831d0bbc66c54874916b55dce.

* refactor: merge payment-service into gym-service

* docs: update README.md

* docs: update README.md